Rounded distance down to 1dp

--- a/app/views/locii/index.html.erb
+++ b/app/views/locii/index.html.erb
@@ -16,7 +16,7 @@
           <p><%= loc.address %></p>
 
           <% if params[:location].present? %>
-            <p><%= loc.distance_to(params[:location]) %>km away</p>
+            <p><%= loc.distance_to(params[:location]).round(1) %>km away</p>
           <% end -%>
 
       </li>
